--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
         <div>
           <input type="range" data-image-fixer-target="slider" id="slider" min="0" max="100" value="50" data-action="input->image-fixer#updateSlider" />
-          <a role="button" id="download" data-image-fixer-target="download" hidden download="fixed-image.png">
+          <a role="button" id="download" data-image-fixer-target="download" hidden download="couleurGPT.png">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-download mr-2 h-4 w-4"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" x2="12" y1="15" y2="3"></line></svg>
             Télécharger l'image corrigée
           </a>
