--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yellow Tint Fixer</title>
+    <title>AI Images Tools</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
     <script src="https://unpkg.com/@hotwired/stimulus"></script>
     <link rel="stylesheet" href="css/style.css">
