--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -75,7 +75,7 @@
           Lorsque vous générez une image avec ChatGPT (ou <a href="https://www.stablediffusion.blog/gpt-image-1">GPT-Image-1</a>), le résultat est souvent esthétiquement réussi… mais <strong>il est systématiquement teinté de jaune ou de sépia</strong>.
         </p>
         <p>
-          <strong>Ce n’est pas une erreur de votre part</strong> : c’est un <em>biais colorimétrique</em> intégré au modèle. Même en formulant un prompt précis, les rendus ont tendance à paraître trop chauds, comme passés à travers un filtre nostalgique.          
+          <strong>Ce n’est pas une erreur de votre part</strong> : c’est un <em>biais colorimétrique</em> intégré au modèle. Même en formulant un prompt précis ou en lui demandant de recréer une image à l'identique, les rendus ont tendance à paraître trop chauds, comme passés à travers un filtre sépia nostalgique.          
         </p>
         <p>
           L'analyse des images met en évidence un déséquilibre dans les canaux RGB, notamment un manque de bleu. Ce décalage modifie la balance des blancs et donne une dominante jaune aux images — subtile (ou pas), mais omniprésente.
