--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -34,7 +34,7 @@
               Choisir une image
             </button>
             
-            <input type="file" data-image-fixer-target="upload" accept="image/*" style="display: none" />
+            <input type="file" data-image-fixer-target="upload"  data-action="change->image-fixer#handleUpload" accept="image/*" style="display: none" />
           </div>
 
         <p>
@@ -72,7 +72,7 @@
         <hr/>
         <h2>Pourquoi les images générées par ChatGPT sont elles si jaunes&nbsp;?</h2>
         <p>
-          Lorsque vous générez une image avec ChatGPT (ou <a href="https://www.stablediffusion.blog/gpt-image-1">GPT-Image-1</a>), le résultat est souvent esthétiquement réussi… mais <strong>il est systématiquement teinté de jaune ou de sépia</strong>.
+          Lorsque vous générez une image avec ChatGPT (ou <a href="https://www.stablediffusion.blog/gpt-image-1" target="_blank">GPT-Image-1</a>), le résultat est souvent esthétiquement réussi… mais <strong>il est systématiquement teinté de jaune ou de sépia</strong>.
         </p>
         <p>
           <strong>Ce n’est pas une erreur de votre part</strong> : c’est un <em>biais colorimétrique</em> intégré au modèle. Même en formulant un prompt précis ou en lui demandant de recréer une image à l'identique, les rendus ont tendance à paraître trop chauds, comme passés à travers un filtre sépia nostalgique.          
