fix input upload

--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -89,7 +89,7 @@
             Vous n'avez rien à régler, rien à deviner.
           </li>
           <li>
-            Ajustement intelligent des canaux RVB pour retrouver un rendu naturel
+            Ajustement intelligent des canaux RGB pour retrouver un rendu naturel
           </li>
           <li> 
             Suppression de la teinte jaune sans altérer les détails ou les contrastes
