--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CouleurGPT - Corrige la teine jaune de ChatGPT</title>
+        <title>AI Images Tools</title>
+
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
   </head>
   <body>
@@ -21,7 +22,7 @@
                 CouleurGPT remet à niveau les couleurs pour se débarasser du jaune de ChatGPT.
               </small>
             </p>
-            <a href="./couleur-gpt/index.html" role="button">
+            <a href="./couleur-gpt" role="button">
               Utiliser CouleurGPT 
             </a>
 
