fix input upload

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 CouleurGPT remet à niveau les couleurs pour se débarasser du jaune de ChatGPT.
               </small>
             </p>
-            <a href="./couleur-gpt" role="button">
+            <a href="./couleur-gpt/" role="button">
               Utiliser CouleurGPT 
             </a>
 
