--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -6,7 +6,7 @@
     <title>CouleurGPT - Corrige la teine jaune de ChatGPT</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
     <script src="https://unpkg.com/@hotwired/stimulus"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/couleur-gpt/css/style.css">
   </head>
   <body data-controller="image-fixer">
     <main>
@@ -119,6 +119,6 @@
       </small>
     </footer>
 
-    <script src="./js/image-fixer.js" defer></script>
+    <script src="/couleur-gpt/js/image-fixer.js" defer></script>
   </body>
 </html>
