Add Vercel Analytics

--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -120,5 +120,9 @@
     </footer>
 
     <script src="/couleur-gpt/js/image-fixer.js" defer></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
