--- a/couleur-gpt/index.html
+++ b/couleur-gpt/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
     <script src="https://unpkg.com/@hotwired/stimulus"></script>
     <link rel="stylesheet" href="/couleur-gpt/css/style.css">
+
+    <meta property="og:title" content="CouleurGPT - Pour en finir avec le jaune" />
+    <meta property="og:description" content="Un outil simple et gratuit pour corriger les couleurs des images trop jaunes de ChatGPT" />
+    <meta property="og:image" content="https://app.stablediffusion.blog/couleur-gpt/images/card.png" />
+    <meta property="og:url" content="https://app.stablediffusion.blog/couleur-gpt/" />
+    <meta property="og:type" content="website" /> 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://app.stablediffusion.blog/couleur-gpt/images/card.png">
+    
+
+
   </head>
   <body data-controller="image-fixer">
     <main>
